better handling of no active view

BUG: 461056